<resources>
    <string name="app_name">My Application</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_dot">.</string>
    <string name="key_summa">+</string>
    <string name="key_minus">-</string>
    <string name="key_multiply">x</string>
    <string name="key_divide">/</string>
    <string name="key_clean">[C]</string>
    <string name="key_del">[DEL]</string>
    <string name="key_equally">=</string>
    <string name="text_size">35sp</string>
    <string name="text_size_2">10sp</string>
</resources>